templates/mantispublish-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert -c
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mantispublish
  name: mantispublish
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mantispublish
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml convert -c
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/mantis_net: "true"
        io.kompose.service: mantispublish
    spec:
      containers:
        - image: netflixoss/mantispublish
          name: mantispublish
          ports:
            - containerPort: 8180
          resources: {}
      restartPolicy: Always
status: {}
