templates/mantispublishweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert -c
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mantispublishweb
  name: mantispublishweb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mantispublishweb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml convert -c
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/mantis_net: "true"
        io.kompose.service: mantispublishweb
    spec:
      containers:
        - image: netflixoss/mantispublishweb
          name: mantispublishweb
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
