templates/mantisagent-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert -c
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mantisagent
  name: mantisagent
spec:
  ports:
    - name: "5051"
      port: 5051
      targetPort: 5051
  selector:
    io.kompose.service: mantisagent
status:
  loadBalancer: {}
