templates/mantismaster-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert -c
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mantismaster
  name: mantismaster
spec:
  ports:
    - name: "8100"
      port: 8100
      targetPort: 8100
    - name: "5005"
      port: 5005
      targetPort: 5005
  selector:
    io.kompose.service: mantismaster
status:
  loadBalancer: {}
